@@ -102,6 +102,8 @@ class MessageCache {
 
 	/**
 	 * ParserOptions is lazy initialised.
+	 *
+	 * @return ParserOptions
 	 */
 	function getParserOptions() {
 		if ( !$this->mParserOptions ) {
@@ -220,6 +222,8 @@ class MessageCache {
 
 	/**
 	 * Set the cache to $cache, if it is valid. Otherwise set the cache to false.
+	 *
+	 * @return bool
 	 */
 	function setCache( $cache, $code ) {
 		if ( isset( $cache['VERSION'] ) && $cache['VERSION'] == MSG_CACHE_VERSION ) {
@@ -734,6 +738,21 @@ class MessageCache {
 			return $message;
 		}
 
+		$parser = $this->getParser();
+		if ( $parser ) {
+			$popts = $this->getParserOptions();
+			$popts->setInterfaceMessage( $interface );
+			$popts->setTargetLanguage( $language );
+			$popts->setUserLang( $language );
+			$message = $parser->transformMsg( $message, $popts, $title );
+		}
+		return $message;
+	}
+
+	/**
+	 * @return Parser
+	 */
+	function getParser() {
 		global $wgParser, $wgParserConf;
 		if ( !$this->mParser && isset( $wgParser ) ) {
 			# Do some initialisation so that we don't have to do it twice
@@ -746,16 +765,28 @@ class MessageCache {
 			} else {
 				$this->mParser = clone $wgParser;
 			}
-			#wfDebug( __METHOD__ . ": following contents triggered transform: $message\n" );
 		}
-		if ( $this->mParser ) {
-			$popts = $this->getParserOptions();
-			$popts->setInterfaceMessage( $interface );
+		return $this->mParser;
+	}
+
+	/**
+	 * @param $text string
+	 * @param $title
+	 * @param $linestart bool
+	 * @return ParserOutput
+	 */
+	public function parse( $text, $title = null, $linestart = true, $interface = false, $language = null  ) {
+		$parser = $this->getParser();
+		$popts = $this->getParserOptions();
+
+		if ( $interface ) {
+			$popts->setInterfaceMessage( true );
+		}
+		if ( $language !== null ) {
 			$popts->setTargetLanguage( $language );
-			$popts->setUserLang( $language );
-			$message = $this->mParser->transformMsg( $message, $popts, $title );
 		}
-		return $message;
+
+		return $parser->parse( $text, $title, $popts, $linestart );
 	}
 
 	function disable() {
